--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +17,13 @@
     "electron": "^9.0.2"
   },
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "bootstrap": "^4.5.0",
+    "bootstrap-vue": "^2.15.0",
+    "circular-progress-bar": "^2.1.0",
     "eslint": "^7.4.0",
+    "jest": "^26.1.0",
+    "progressbar.js": "^1.1.0",
     "vue": "^2.6.11"
   }
 }
